--- a/Assignment-4/template.html.erb
+++ b/Assignment-4/template.html.erb
@@ -1,15 +1,23 @@
 <html>
 	<head>
-	    <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/style.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/highlighter.css">
+
+		<script src = "js/highlighter.js"></script>
+		<script>
+			function load(){
+				highlight();
+			}
+		</script>
 	</head>
-	<body>
+	<body onload = "load()">
 		<h1 id = "title">Cross-Indexing</h1>
 		<div class = "code">
 			<div class = "assembly">
 				<% final_arr.each do |final_tuple| %>
 					<% if final_tuple.instr == nil%>
 						<% if final_tuple.pc != nil %>
-							<span><%= final_tuple.pc %></br></span>
+							<span><%= final_tuple.pc %></span></br>
 						<% else %>
 							</br>
 						<% end %>
@@ -30,9 +38,9 @@
 						</br>
 					<% else %>
 						<% if final_tuple.gray %>
-							<span class = "gray"><%= final_tuple.src %></br></span>
+							<span class = "srcline"><span class = "gray"><%= final_tuple.src %></span></span></br>
 						<% else %>
-							<span><%= final_tuple.src %></br></span>
+							<span class = "srcline"><%= final_tuple.src %></span></br>
 						<% end %>
 					<% end %>
 				<% end %>
