--- a/Assignment-4/template.html.erb
+++ b/Assignment-4/template.html.erb
@@ -14,36 +14,44 @@
 		<h1 id = "title">Cross-Indexing</h1>
 		<div class = "code">
 			<div class = "assembly">
-				<% final_arr.each do |final_tuple| %>
-					<% if final_tuple.instr == nil%>
-						<% if final_tuple.pc != nil %>
-							<span><%= final_tuple.pc %></span></br>
-						<% else %>
-							</br>
-						<% end %>
-					<% else %>
-						<span id = "<%= final_tuple.pc %>">
-							<% if final_tuple.target != nil %>
-								<a href = "#<%= final_tuple.target %>"><%= final_tuple.instr %></a></br>
+				<table>
+					<% final_arr.each do |final_tuple| %>
+						<tr>
+							<% if final_tuple.instr == nil%>
+								<% if final_tuple.pc != nil %>
+									<td><%= final_tuple.pc %></br></td>
+								<% else %>
+									<td></br></td>
+								<% end %>
 							<% else %>
-								<%= final_tuple.instr %></br>
+								<td id = "<%= final_tuple.pc %>">
+									<% if final_tuple.target != nil %>
+										<a href = "#<%= final_tuple.target %>"><%= final_tuple.instr %></a></br>
+									<% else %>
+										<%= final_tuple.instr %></br>
+									<% end %>
+								</td>
 							<% end %>
-						</span>
+						</tr>
 					<% end %>
-				<% end %>
+				</table>
             </div>
-            <div class = "source">
-				<% final_arr.each do |final_tuple| %>
-					<% if final_tuple.src == nil%>
-						</br>
-					<% else %>
-						<% if final_tuple.gray %>
-							<span class = "srcline"><span class = "gray"><%= final_tuple.src %></span></span></br>
-						<% else %>
-							<span class = "srcline"><%= final_tuple.src %></span></br>
-						<% end %>
+			<div class = "source">
+				<table>
+					<% final_arr.each do |final_tuple| %>
+						<tr>
+							<% if final_tuple.src == nil%>
+								<td></br></td>
+							<% else %>
+								<% if final_tuple.gray %>
+									<td class = "srcline"><span class = "gray"><%= final_tuple.src %></span></br></td>
+								<% else %>
+									<td class = "srcline"><%= final_tuple.src %></br></td>
+								<% end %>
+							<% end %>
+						</tr>
 					<% end %>
-				<% end %>
+				</table>
 			</div>
 		</div>
 	<body>
