--- a/Assignment-4/css/style.css
+++ b/Assignment-4/css/style.css
@@ -9,20 +9,29 @@
 
 .assembly{
 	float: left;
-	width: 48%;
-	text-align: right;
+	width: 49%;
+	/*text-align: right;*/
 	font-size:x-large;
 	border: 1px solid green;
 }
 
 .source{
 	float: right;
-	width: 48%;
-	text-align: left;
+	width: 49%;
+	/*text-align: left;*/
 	font-size:x-large;
 	border: 1px solid green;
 }
 
 .gray{
 	color: gray;
+}
+
+table{
+	width: 100%;
+}
+
+td{
+	padding: 5px;
+	border-bottom: 1px dotted black;
 }
