--- a/Assignment-4/template_sc.html.erb
+++ b/Assignment-4/template_sc.html.erb
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link rel = "stylesheet" type = "text/css" href = "css/style.css">
-		<link rel = "stylesheet" type = "text/css" href = "css/highlighter.css">
+		<link rel = "stylesheet" type = "text/css" href = "<%= Dir.pwd %>/css/style.css">
+		<link rel = "stylesheet" type = "text/css" href = "<%= Dir.pwd %>/css/highlighter.css">
 
-		<script src = "js/highlighter.js"></script>
+		<script src = "<%= Dir.pwd %>/js/highlighter.js"></script>
 		<script>
 			function load(){
 				highlight();
